fonts to webpack

--- a/static/index.less
+++ b/static/index.less
@@ -30,6 +30,8 @@ nav ul {
 	height: 90px;
 	box-sizing: border-box;
 	bottom: 0;
+	padding: 0 10px;
+	border-top: 1px solid rgba(128, 128, 128, 0.2);
 	width: 100%;
 	margin: 0;
 }
