--- a/app/static/index.less
+++ b/app/static/index.less
@@ -34,6 +34,12 @@ nav ul {
 	border-top: 1px solid rgba(128, 128, 128, 0.2);
 	width: 100%;
 	margin: 0;
+
+	&__progress {
+		margin: 0;
+		left: 0;
+		position: absolute;
+	}
 }
 
 .player__content {
