added artis page and top songs queue

--- a/app/static/index.less
+++ b/app/static/index.less
@@ -14,7 +14,7 @@ nav ul {
 	top: 64px;
 	padding: 0 10px;
 	z-index: -1;
-	bottom: 74px;
+	bottom: 90px;
 	width: 100%;
 	overflow: scroll;
 }
@@ -82,17 +82,15 @@ nav ul {
 .grid {
 	position: relative;
 	&__content {
-		position: absolute;
-		left: -5px;
-		right: -5px;
+		margin-left: -5px;
+		margin-right: -5px;
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-around;
 		flex-wrap: wrap;
 	}
 	&__item {
 		margin: 0 5px 10px 5px;
 		width: 208px;
-		height: 270px;
 	}
 }
 
